use arraylist in tf form
Change linkedlist into arraylist in class TermForm, termFrequency